--- a/css/app.css
+++ b/css/app.css
@@ -371,10 +371,10 @@ html {
 }
 body {
     position: absolute;
-    top: 20px;
+    /*top: 20px;
     left: 20px;
     bottom: 20px;
-    right: 20px;
+    right: 20px;*/
     /*padding: 30px; */
     overflow-y: scroll;
     overflow-x: hidden;
